// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an error when present 1`] = `
<div
  className="undefined error"
  id="5678"
>
  <label>
    Test
  </label>
  <input
    autoComplete="off"
    className=" error"
    onChange={[Function]}
    placeholder="Please enter your loyalty number"
    title=" Incorrect loyalty number"
    type="text"
    value=""
  />
</div>
`;

exports[`renders the form text input correctly 1`] = `
<div
  className="undefined"
  id="1234"
>
  <label>
    Test
  </label>
  <input
    autoComplete="off"
    className=""
    onChange={[Function]}
    placeholder="Please enter your loyalty number"
    title=" undefined"
    type="text"
    value=""
  />
</div>
`;

exports[`should call onChange when an input is entered 1`] = `
<div
  className="undefined"
>
  <input
    autoComplete="off"
    className=""
    name="email"
    onChange={[Function]}
    title=" undefined"
    type="text"
    value="test@johnlewis.co.uk"
  />
  <span
    className="clearInput"
  >
    <Icon
      as="i"
      circular={true}
      id="removeemail"
      link={true}
      name="remove"
      onClick={[Function]}
      size="small"
    />
  </span>
</div>
`;

exports[`should call onClearEmail when the button is clicked 1`] = `
<div
  className="undefined"
>
  <label />
  <input
    autoComplete="off"
    name="email"
    onChange={[Function]}
    type="text"
    value="test@johnlewis.co.uk"
  />
  <span
    className="clearInput"
  >
    <Icon
      as="i"
      circular={true}
      id="removeemail"
      link={true}
      name="remove"
      onClick={[Function]}
      size="small"
    />
  </span>
</div>
`;
